iOS: Fix message height jump on load (#3544)

--- a/src/components/common/EmbeddedMessage.scss
+++ b/src/components/common/EmbeddedMessage.scss
@@ -101,7 +101,7 @@
     .emoji {
       width: calc(1.125 * var(--message-text-size, 1rem)) !important;
       height: calc(1.125 * var(--message-text-size, 1rem)) !important;
-      vertical-align: text-bottom !important;
+      vertical-align: bottom !important;
     }
 
     .custom-emoji {
