--- a/src/components/middle/message/Invoice.scss
+++ b/src/components/middle/message/Invoice.scss
@@ -21,6 +21,7 @@
       .invoice-image {
         position: relative;
         width: 100%;
+        max-width: 100%;
         max-height: 30rem;
         object-fit: cover;
         border-bottom-left-radius: var(--border-bottom-left-radius);
